--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ body {
 
 .header {
   display: flex;
-  justify-content: space-between;
-  padding: 16px;
+  justify-content: space-around;
+  padding-top: 16px;
 }
 
 .logo {
@@ -32,7 +32,8 @@ ul {
   gap: 16px;
 }
 
-a {
+a,
+.sect1-text {
   font-size: 18px;
   color: #e5e7eb;
   text-decoration: none;
@@ -52,21 +53,23 @@ a {
 
 .first-container,
 .second-container,
-.third-container,
-.fourth-container {
+.third-container {
   flex: 0 0 100%;
+  height: 500px
 }
 
 .first-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 100px 0;
 }
 
 .second-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .third-container {
@@ -79,6 +82,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex: 0 0 100%;
+  height: 300px;
 }
 
 .sect1-info {
@@ -107,6 +112,33 @@ button.sign-up {
   background: #3882F6;
   border: 1px solid #3882F6;
   color: white;
+}
+
+.sect1-image {
+  max-width: 90%;
+  max-width: auto;
+}
+
+.random-container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.s2-title {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1F2937;
+  margin: 42px;
+}
+
+.s2-image {
+  max-width: 80%;
+  max-height: auto;
+}
+
+.box-info {
+  max-width: 200px;
 }
 
 .footer {
