--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ a,
 .second-container,
 .third-container {
   flex: 0 0 100%;
-  height: 500px
+  height: 400px;
 }
 
 .first-container {
@@ -67,7 +67,7 @@ a,
 
 .second-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
 }
@@ -115,8 +115,9 @@ button.sign-up {
 }
 
 .sect1-image {
-  max-width: 90%;
-  max-width: auto;
+  max-width: 525px;
+  height: auto;
+  border-radius: 8px;
 }
 
 .random-container {
@@ -129,7 +130,6 @@ button.sign-up {
   font-size: 36px;
   font-weight: bolder;
   color: #1F2937;
-  margin: 42px;
 }
 
 .s2-image {
@@ -138,7 +138,11 @@ button.sign-up {
 }
 
 .box-info {
-  max-width: 200px;
+  max-width: 250px;
+  text-align: center;
+}
+.s2-text {
+  color: #4b5563;
 }
 
 .footer {
