--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ a,
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #e5e7eb;
 }
 
 .fourth-container {
@@ -143,6 +144,28 @@ button.sign-up {
 }
 .s2-text {
   color: #4b5563;
+}
+
+.quote-container {
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.s3-quote {
+  font-size: 36px;
+  font-weight: lighter;
+  font-style: italic;
+  color: #1F2937;
+}
+
+.s3-strong {
+  color: #1f2937;
+  display: flex;
+  flex-direction: row-reverse;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 .footer {
