--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,7 @@ ul {
 }
 
 a,
-.sect1-text,
-.c2a-signup {
+.sect1-text {
   font-size: 18px;
   color: #e5e7eb;
   text-decoration: none;
@@ -148,6 +147,7 @@ button.sign-up {
 }
 
 .quote-container {
+  color: #1f2937;
   width: 800px;
   display: flex;
   flex-direction: column;
@@ -172,7 +172,7 @@ button.sign-up {
 .c2a-container {
   background: #3882F6;
   width: 1400px;
-  height: 100px;
+  height: 150px;
   border-radius: 10px;
   padding: 16px;
   display: flex;
@@ -191,15 +191,16 @@ button.sign-up {
 }
 
 .s4-text {
-  font-size: 24px;
+  font-size: 21px;
 }
 
 .c2a-signup {
   background: #3b82f6;
+  color: white;
   border: 2px solid #ffffff;
   font-weight: 600;
   padding: 8px 28px;
-  font-size: 24;
+  font-size: 21px;
 }
 
 .footer {
